# msc_mlai

./: .gitignore  analysis_data.csv  dataset_gen.py  download.py  download_imagenet.py  permutations.csv  permutations_test.csv  pyproject.toml  readme.md  resNet18.py  sample.py  sweep.csv  sweep.py  sweep_test.csv  test.csv
conf/: config.yaml  dataset.yaml
data/: append_artifacts.py  data.py  dataset_latents.csv  encoding_comparison_stats.csv  final_meta_dataset.pt  meta_data.csv  meta_data.py  model_latents.pt  model_latents.pth  move.py  new_sweep.csv  pipeline.md  simple_sweep.csv  sweep.csv  trained_encoder_weights.pth  trained_encoder_weights_best_val.pth  wandb_export.csv  wandb_runs_data.csv  wandb_w_artifacts.csv
data/dataset/: data_splits.json  metadata.json  pca_encoder.pth
docs/: Spotlight Presentation.md  data_gen.md  data_prep.md  sportlight_presentation.md  spotlight_presentation.md  train_pipe.md
docs/latex/: msc.aux  msc.bbl  msc.blg  msc.fdb_latexmk  msc.fls  msc.out  msc.tex  msc.toc  mybib.bib
scripts/: download.py  download_imagenet.py  resNet18.py  shared_emb_space.py  train.py  train_sched_gen.py
scripts/conf/: config.yaml  dataset.yaml
scripts/embedding/: decode.py  encode_data.py  encode_models.py  final_meta_dataset.pt  meta-dataset_info.csv  pca_method.py  prep_metadataset.py  shared_emb_space.py  test.py  trained_encoder_weights.pth
scripts/wandb_helpers/: report.py  (+2 more)
src/: cond_mod_sam.py  inspect.py  shared_emb_space.py  shared_mlp.py  test.py
wandb_runs/: merge.py  runs.csv  visualize_runs.py  wandb_helper.py
(+52 files in other folders)
