[project]
name = "msc-mlai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "pandas>=2.3.2",
    "pytorch-lightning>=2.5.4",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.3",
]
